Company Profiles Finished

--- a/companies/abcellera.html
+++ b/companies/abcellera.html
@@ -136,9 +136,9 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Events</h2>
+                              <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Events will be driven by New Partnerships and Data from current Partnerships.
+                                   Comming soon
                               </p>
                               
                          </section> 
@@ -149,6 +149,19 @@
                                    <a href="https://investors.abcellera.com/news/news-releases/2022/AbCellera-Presents-New-Data-on-Further-Development-and-Characterization-of-T-Cell-Engager-Platform-at-SITC-2022/default.aspx">
                                    CD3 T cell Engager Designed Antibodies
                                    </a>
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://investors.abcellera.com/news/default.aspx" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.abcellera.com/events/default.aspx" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.abcellera.com/financials/sec-filings/default.aspx" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     </div>
