--- a/companies/beam.html
+++ b/companies/beam.html
@@ -174,7 +174,14 @@
                                    All in, that is a $2.15 billion market cap. Based on the 70 million shares outstanding, that comes to 
                                    $30.71.
                               </p>
-                         </section>  
+                         </section> 
+                         
+                         <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
 
                          <section class="section-container">
                               <h2 class="list-header">Events</h2>
@@ -199,6 +206,19 @@
                               <h2 class="list-header">Data Readouts</h2>
                               <p class="profiles">
                               No Clinical Data Yet.
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://investors.beamtx.com/press-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.beamtx.com/events" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.beamtx.com/financials-filings/sec-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     </div>
