--- a/companies/blueprint.html
+++ b/companies/blueprint.html
@@ -176,6 +176,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    Ayvakit Indolent SM awaiting approval mid 2023
@@ -205,6 +212,19 @@
                                    <a href="https://ir.blueprintmedicines.com/news-releases/news-release-details/blueprint-medicines-announces-blu-945-proof-concept-data">
                                    BLU-945 Early data
                                    </a>
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://ir.blueprintmedicines.com/news-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.blueprintmedicines.com/events-and-presentations/events-presentations" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.blueprintmedicines.com/sec-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     
