--- a/companies/exscientia.html
+++ b/companies/exscientia.html
@@ -171,6 +171,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    EXALT 1 Phase 1
@@ -194,6 +201,19 @@
                                    <a href="https://investors.exscientia.ai/press-releases/press-release-details/2022/Exscientia-Reports-Topline-Data-From-EXS-21546-Phase-1a-Study-Demonstrating-Targeted-A2A-Receptor-Signaling-Inhibition-in-Healthy-Volunteers/default.aspx">
                                         EXS-21546 Data
                                    </a>
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://investors.exscientia.ai/press-releases/default.aspx" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.exscientia.ai/events-and-presentations/default.aspx" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.exscientia.ai/financials-and-filings/sec-filings/default.aspx" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     </div>
