--- a/companies/fate.html
+++ b/companies/fate.html
@@ -144,6 +144,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    FT-576 Phase 1 Ongoing
@@ -160,6 +167,19 @@
                               <h2 class="list-header">Data Readouts</h2>
                               <p class="profiles">
                               There is no data yet for these new programs.
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://ir.fatetherapeutics.com/press-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.fatetherapeutics.com/events-and-presentations" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.fatetherapeutics.com/financial-information/sec-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     
