--- a/companies/ginkgo.html
+++ b/companies/ginkgo.html
@@ -157,17 +157,22 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Events</h2>
+                              <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   There is no key events other than announcing new partnerships.
+                                   Coming Soon
                               </p>
-                         </section> 
+                         </section>
 
                          <section class="section-container">
-                              <h2 class="list-header">Data Readouts</h2>
+                              <h2 class="list-header">Company Website Links</h2>
                               <p class="profiles">
-                                   There are no Data Readouts as they run no clinical trials. They do present
-                                   data on their cell programming from time to time.
+                                   <a href="https://investors.ginkgobioworks.com/news/default.aspx" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.ginkgobioworks.com/events/default.aspx" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.ginkgobioworks.com/sec-filings/default.aspx" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     </div>
