--- a/companies/intellia.html
+++ b/companies/intellia.html
@@ -171,6 +171,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    NTLA-2001 Expect US IND submission in mid 2023
@@ -200,6 +207,19 @@
                                    <a href="https://ir.intelliatx.com/news-releases/news-release-details/intellia-therapeutics-presents-new-interim-data-first-human">
                                    NTLA-2002 Phase 1 data
                                    </a>
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://ir.intelliatx.com/press-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.intelliatx.com/events-and-presentations/upcoming-events" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.intelliatx.com/financial-information/sec-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     </div>
