--- a/companies/invitae.html
+++ b/companies/invitae.html
@@ -145,16 +145,22 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Events</h2>
+                              <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   They are developing new tests for different indications. 
+                                   Coming Soon 
                               </p>
                          </section> 
-
+                         
                          <section class="section-container">
-                              <h2 class="list-header">Data Readouts</h2>
+                              <h2 class="list-header">Company Website Links</h2>
                               <p class="profiles">
-                                   They don't have clinical data as much as they have accuracy rates for the tests they develop.
+                                   <a href="https://ir.invitae.com/news-and-events/press-releases/default.aspx" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.invitae.com/news-and-events/events/default.aspx" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.invitae.com/financials/sec-filings/default.aspx" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     </div>
