--- a/companies/kymera.html
+++ b/companies/kymera.html
@@ -159,7 +159,14 @@
                               <p class="profiles">
                                    All in, that is a $1.91 billion market cap. Based on the 55 million shares outstanding, that comes to $34.72.
                               </p>
-                         </section>  
+                         </section> 
+                         
+                         <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
 
                          <section class="section-container">
                               <h2 class="list-header">Events</h2>
@@ -183,6 +190,19 @@
                                    <a href="https://investors.kymeratx.com/news-releases/news-release-details/kymera-announces-positive-results-phase-1-clinical-trial">
                                    KT-474 Data in HS and AD
                                    </a>
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://investors.kymeratx.com/press-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.kymeratx.com/events-and-presentations" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.kymeratx.com/financials-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     
