--- a/companies/mirati.html
+++ b/companies/mirati.html
@@ -164,6 +164,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    Adagrasib CRC ongoing Phase 1/2 
@@ -195,6 +202,19 @@
                                    <a href="https://ir.mirati.com/press-releases/press-release-details/2022/Mirati-Therapeutics-Presents-Late-Breaking-Adagrasib-Monotherapy-and-Combination-Results-in-Advanced-Colorectal-Cancer/default.aspx">
                                    Sitravatinib Phase 2 Data
                                    </a>
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://ir.mirati.com/press-releases/default.aspx" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.mirati.com/events-and-presentations/default.aspx" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.mirati.com/financials/sec-filings/default.aspx" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     
