--- a/companies/monterosa.html
+++ b/companies/monterosa.html
@@ -156,6 +156,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    MRT-2359 Phase 1 Ongoing
@@ -175,6 +182,19 @@
                               <h2 class="list-header">Data Readouts</h2>
                               <p class="profiles">
                                    No Data Yet
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://ir.monterosatx.com/news-and-events/press-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.monterosatx.com/news-and-events/events-and-presentations" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.monterosatx.com/financials-and-filings/sec-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     
