--- a/companies/prime.html
+++ b/companies/prime.html
@@ -162,6 +162,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    Friedreich's Ataxia is 2 years from clinic
@@ -181,6 +188,19 @@
                               <h2 class="list-header">Data Readouts</h2>
                               <p class="profiles">
                               Should see Animal Data 2H of 2023.
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://investors.primemedicine.com/news-events/news-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.primemedicine.com/news-events" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.primemedicine.com/financials-filings/sec-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     </div>
