--- a/companies/sana.html
+++ b/companies/sana.html
@@ -172,6 +172,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    SC291 IND submitted and starting phase 1 in 2023
@@ -193,6 +200,19 @@
                               They don't have any data yet, but their animal data for Hypoimmune looks very promising.
                               </p>
                          </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://ir.sana.com/news-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.sana.com/events-and-presentations" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.sana.com/financial-information/sec-filings" target="_blank">SEC Filings</a>
+                              </p>
+                         </section>
                     
                     </div>
                     <div class="back-companies">
