--- a/companies/schrodinger.html
+++ b/companies/schrodinger.html
@@ -156,6 +156,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    SGR-1505 Phase 1 Enrolling
@@ -169,6 +176,19 @@
                               <h2 class="list-header">Data Readouts</h2>
                               <p class="profiles">
                               No Clinical Data Yet.
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://ir.schrodinger.com/news-and-events/press-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.schrodinger.com/news-and-events/event-calendar" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.schrodinger.com/financial-information/sec-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     </div>
