--- a/companies/verve.html
+++ b/companies/verve.html
@@ -98,7 +98,7 @@
                          <section class="section-container">
                               <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   I haven’t been following Verve or Sekar Kathiresan all that long. I do think he is a good CEO, but I 
+                                   I haven't been following Verve or Sekar Kathiresan all that long. I do think he is a good CEO, but I 
                                    think he overestimates the potential for these therapies to take market share for existing therapies. 
                                    They are just starting in the clinic so we will have to wait to see some data. I do think they are 
                                    doing a good job of managing the balance sheet well. They seem to focus on innovation with a new novel 
@@ -147,6 +147,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    VERV-101 Initial Data in 2H 2023 outside US
@@ -164,6 +171,19 @@
                                    </a>
                               </p>
                          </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://ir.vervetx.com/news-and-events/news-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.vervetx.com/news-and-events/events" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.vervetx.com/financials-and-filings/sec-filings" target="_blank">SEC Filings</a>
+                              </p>
+                         </section>
                     </div>
                     <div class="back-companies">
                          <a href="companies.html">Back to Companies</a>
