--- a/learning/science.html
+++ b/learning/science.html
@@ -124,10 +124,24 @@
                     </section>
 
                     <section class="science-topic">
-                         <h2 class="science-list"><a href="#">Biology</a></h2>
+                         <h2 class="science-list"><a href="biology.html">Biology</a></h2>
                          <ul>
                               <li class="science-topics">
-                                   <a href="#">Intro to Biology</a>
+                                   <a href="biology.html#whatis">What is Life?</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="biology.html#cellbio">Cell Biology</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="biology.html#bacteria">Bacteria</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="biology.html#viruses">Viruses</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="biology.html#parasites">Parasites</a>
+                              </li><li class="science-topics">
+                                   <a href="biology.html#fungi">Fungi</a>
                               </li>
                          </ul>
                     </section>
