--- a/companies/caribou.html
+++ b/companies/caribou.html
@@ -160,6 +160,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    CB-010 Phase 1 Ongoing
@@ -181,6 +188,19 @@
                                    <a href="https://investor.cariboubio.com/news-releases/news-release-details/caribou-biosciences-reports-positive-additional-data-cb-010">
                                    CB-010 Phase 1 Data
                                    </a>
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://investor.cariboubio.com/news-events/press-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investor.cariboubio.com/news-events/events" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investor.cariboubio.com/financials-filings/sec-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     
