--- a/companies/ipsc.html
+++ b/companies/ipsc.html
@@ -154,6 +154,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    CNTY-101 Phase 1 Enrolling
@@ -170,6 +177,19 @@
                               <h2 class="list-header">Data Readouts</h2>
                               <p class="profiles">
                                    Not Data Yet.
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://investors.centurytx.com/press-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.centurytx.com/events-and-presentations" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.centurytx.com/financial-information/sec-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     </div>
