--- a/companies/oxford.html
+++ b/companies/oxford.html
@@ -133,18 +133,21 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Events</h2>
+                              <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   They are constantly developing new technology to improve their existing sequencers and develop 
-                                   new sequencers for the future.
+                                   Coming Soon
                               </p>
-                         </section> 
-
+                         </section>
                          <section class="section-container">
-                              <h2 class="list-header">Data Readouts</h2>
+                              <h2 class="list-header">Company Website Links</h2>
                               <p class="profiles">
-                                   They don't have clinical data as much as they have accuracy rates for their sequencing technology 
-                                   they develop. They will continue to drive down cost per genome sequenced over time.
+                                   <a href="https://nanoporetech.com/about-us/news" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://nanoporetech.com/about-us/investors/reports" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://www.sec.gov/edgar/browse/?CIK=1951610" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     </div>
