--- a/companies/pacbio.html
+++ b/companies/pacbio.html
@@ -139,20 +139,24 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Events</h2>
+                              <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   They are constantly developing new technology to improve their existing sequencers and develop 
-                                   new sequencers for the future.
+                                   Coming Soon
                               </p>
                          </section> 
 
                          <section class="section-container">
-                              <h2 class="list-header">Data Readouts</h2>
+                              <h2 class="list-header">Company Website Links</h2>
                               <p class="profiles">
-                                   They don't have clinical data as much as they have accuracy rates for their secquencing technology 
-                                   they develop. They will continue to drive down cost per genome sequenced over time.
+                                   <a href="https://investor.pacificbiosciences.com/press-releases" target="_blank">Press Releases</a>
                               </p>
-                         </section> 
+                              <p class="profiles">
+                                   <a href="https://investor.pacificbiosciences.com/events-and-presentations" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investor.pacificbiosciences.com/financial-information/sec-filings" target="_blank">SEC Filings</a>
+                              </p>
+                         </section>  
                     </div>
                     <div class="back-companies">
                          <a href="companies.html">Back to Companies</a>
