--- a/companies/recursion.html
+++ b/companies/recursion.html
@@ -158,6 +158,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    REC-4881 Phase 2 enrolling
@@ -177,6 +184,19 @@
                               <h2 class="list-header">Data Readouts</h2>
                               <p class="profiles">
                                    No Efficacy Data Yet
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://ir.recursion.com/news-events/press-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.recursion.com/news-events/events-presentations" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.recursion.com/financials-filings/sec-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                          
