--- a/companies/relay.html
+++ b/companies/relay.html
@@ -166,6 +166,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    RLY-4008 Phase 1 Ongoing
@@ -192,6 +199,19 @@
                                    <a href="https://ir.relaytx.com/news-releases/news-release-details/relay-therapeutics-announces-preclinical-data-support-rly-2608">
                                    RLY-2608 Preclinical Safety Data
                                    </a>
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://ir.relaytx.com/news-events/press-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.relaytx.com/news-events/events-presentations" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.relaytx.com/financials/sec-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     </div>
