--- a/companies/revolution.html
+++ b/companies/revolution.html
@@ -159,6 +159,13 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   Coming Soon
+                              </p>
+                         </section>
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    RMC-6236 Single Agent Data mid 2023
@@ -178,6 +185,19 @@
                               <h2 class="list-header">Data Readouts</h2>
                               <p class="profiles">
                               No Data Yet.
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
+                              <h2 class="list-header">Company Website Links</h2>
+                              <p class="profiles">
+                                   <a href="https://ir.revmed.com/press-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.revmed.com/events-and-presentations" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://ir.revmed.com/sec-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     
