--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
                     <section class="news-updates">
                          <div>
                               <h2 class="section-title">Website Updates</h2>
+
+                              <p> 
+                                   <strong>2/11/2023: </strong> I added a Partnership Secton under each Company's Profile page.
+                                   I also added links section to their Website Key areas like Press Releases, Events and SEC filings.
+                              </p>
                               <p> 
                                    <strong>2/10/2023: </strong> I finished up the Companies pages. I even started adding new data 
                                    to companies as they report earnings with links to the Company's Website and Partnerships.
@@ -101,10 +106,6 @@
                               <p> 
                                    <strong>2/12/2023: </strong> I fixed the Companies Page with a new format. I also added a Back to Companies 
                                    Page link at the bottom of every company profile for faster navigation. 
-                              </p>
-                              <p> 
-                                   <strong>2/11/2023: </strong> Finished up the Chemistry and Biochemistry pages. I plan to start the 
-                                   Biology pages tomorrow.
                               </p>
                          </div>
                     </section>
