Company Updates Complete

--- a/companies/beam.html
+++ b/companies/beam.html
@@ -220,10 +220,13 @@
                               <p class="profiles">
                                    <a href="https://investors.beamtx.com/financials-filings/sec-filings" target="_blank">SEC Filings</a>
                               </p>
+                              <p class="profiles">
+                                   <a href="https://beamtx.com/science/posters-and-presentations/" target="_blank">Posters & Publications</a>
+                              </p>
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="schrodinger.html">&lt;Previous</a> <a href="intellia.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
