--- a/companies/blueprint.html
+++ b/companies/blueprint.html
@@ -226,11 +226,14 @@
                               <p class="profiles">
                                    <a href="https://ir.blueprintmedicines.com/sec-filings" target="_blank">SEC Filings</a>
                               </p>
+                              <p class="profiles">
+                                   <a href="https://www.blueprintmedicines.com/science/the-lens/" target="_blank">Posters & Publications</a>
+                              </p>
                          </section> 
                     
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="caribou.html">&lt;Previous</a> <a href="mirati.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
