--- a/companies/ipsc.html
+++ b/companies/ipsc.html
@@ -13,7 +13,7 @@
           </script>
 
           <!-- Title Page -->
-          <title>Cnetury Therapeutics Profile</title>
+          <title>Century Therapeutics Profile</title>
 
           <!-- Meta Tags -->
           <meta charset="UTF-8">
@@ -191,10 +191,13 @@
                               <p class="profiles">
                                    <a href="https://investors.centurytx.com/financial-information/sec-filings" target="_blank">SEC Filings</a>
                               </p>
+                              <p class="profiles">
+                                   <a href="https://www.centurytx.com/science/?&category=12&tag=all" target="_blank">Posters & Publications</a>
+                              </p>
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="twist.html">&lt;Previous</a> <a href="sana.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
