--- a/companies/kymera.html
+++ b/companies/kymera.html
@@ -204,11 +204,14 @@
                               <p class="profiles">
                                    <a href="https://investors.kymeratx.com/financials-filings" target="_blank">SEC Filings</a>
                               </p>
+                              <p class="profiles">
+                                   <a href="https://www.kymeratx.com/scientific-resources/?cat=13&tag=all" target="_blank">Posters & Publications</a>
+                              </p>
                          </section> 
                     
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="mirati.html">&lt;Previous</a> <a href="revolution.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
