--- a/companies/monterosa.html
+++ b/companies/monterosa.html
@@ -200,7 +200,7 @@
                     
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="revolution.html">&lt;Previous</a> <a href="relay.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
