--- a/companies/oxford.html
+++ b/companies/oxford.html
@@ -149,10 +149,13 @@
                               <p class="profiles">
                                    <a href="https://www.sec.gov/edgar/browse/?CIK=1951610" target="_blank">SEC Filings</a>
                               </p>
+                              <p class="profiles">
+                                   <a href="https://nanoporetech.com/resource-centre?tags[value][0]=publications" target="_blank">Posters & Publications</a>
+                              </p>
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="pacbio.html">&lt;Previous</a> <a href="ginkgo.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
