--- a/companies/recursion.html
+++ b/companies/recursion.html
@@ -198,11 +198,14 @@
                               <p class="profiles">
                                    <a href="https://ir.recursion.com/financials-filings/sec-filings" target="_blank">SEC Filings</a>
                               </p>
+                              <p class="profiles">
+                                   <a href="https://www.recursion.com/scientificmaterials" target="_blank">Posters & Publications</a>
+                              </p>
                          </section> 
                          
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="relay.html">&lt;Previous</a> <a href="exscientia.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
