--- a/companies/caribou.html
+++ b/companies/caribou.html
@@ -202,11 +202,14 @@
                               <p class="profiles">
                                    <a href="https://investor.cariboubio.com/financials-filings/sec-filings" target="_blank">SEC Filings</a>
                               </p>
+                              <p class="profiles">
+                                   <a href="https://www.cariboubio.com/technology/#pubs" target="_blank">Posters & Publications</a>
+                              </p>
                          </section> 
                     
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="fate.html">&lt;Previous</a> <a href="blueprint.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
