--- a/companies/exscientia.html
+++ b/companies/exscientia.html
@@ -215,10 +215,13 @@
                               <p class="profiles">
                                    <a href="https://investors.exscientia.ai/financials-and-filings/sec-filings/default.aspx" target="_blank">SEC Filings</a>
                               </p>
+                              <p class="profiles">
+                                   <a href="https://www.exscientia.ai/publications" target="_blank">Posters & Publications</a>
+                              </p>
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="recursion.html">&lt;Previous</a> <a href="abcellera.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>    
