--- a/companies/fate.html
+++ b/companies/fate.html
@@ -181,11 +181,14 @@
                               <p class="profiles">
                                    <a href="https://ir.fatetherapeutics.com/financial-information/sec-filings" target="_blank">SEC Filings</a>
                               </p>
+                              <p class="profiles">
+                                   <a href="https://fatetherapeutics.com/science/publications/" target="_blank">Posters & Publications</a>
+                              </p>
                          </section> 
                     
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="sana.html">&lt;Previous</a> <a href="caribou.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
