--- a/companies/intellia.html
+++ b/companies/intellia.html
@@ -220,11 +220,13 @@
                               </p>
                               <p class="profiles">
                                    <a href="https://ir.intelliatx.com/financial-information/sec-filings" target="_blank">SEC Filings</a>
+                              </p><p class="profiles">
+                                   <a href="https://www.intelliatx.com/publications-and-presentations/" target="_blank">Posters & Publications</a>
                               </p>
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="beam.html">&lt;Previous</a> <a href="crispr.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
