--- a/companies/mirati.html
+++ b/companies/mirati.html
@@ -216,11 +216,14 @@
                               <p class="profiles">
                                    <a href="https://ir.mirati.com/financials/sec-filings/default.aspx" target="_blank">SEC Filings</a>
                               </p>
+                              <p class="profiles">
+                                   <a href="https://www.mirati.com/science/presentations-publications/" target="_blank">Posters & Publications</a>
+                              </p>
                          </section> 
                     
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="blueprint.html">&lt;Previous</a> <a href="kymera.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
