--- a/companies/prime.html
+++ b/companies/prime.html
@@ -202,10 +202,13 @@
                               <p class="profiles">
                                    <a href="https://investors.primemedicine.com/financials-filings/sec-filings" target="_blank">SEC Filings</a>
                               </p>
+                              <p class="profiles">
+                                   <a href="https://primemedicine.com/science/#scientific-publications" target="_blank">Posters & Publications</a>
+                              </p>
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="verve.html">&lt;Previous</a> <a href="invitae.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
