--- a/companies/relay.html
+++ b/companies/relay.html
@@ -213,10 +213,13 @@
                               <p class="profiles">
                                    <a href="https://ir.relaytx.com/financials/sec-filings" target="_blank">SEC Filings</a>
                               </p>
+                              <p class="profiles">
+                                   <a href="https://relaytx.com/publications/" target="_blank">Posters & Publications</a>
+                              </p>
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="monterosa.html">&lt;Previous</a> <a href="recursion.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
