--- a/companies/revolution.html
+++ b/companies/revolution.html
@@ -199,11 +199,14 @@
                               <p class="profiles">
                                    <a href="https://ir.revmed.com/sec-filings" target="_blank">SEC Filings</a>
                               </p>
+                              <p class="profiles">
+                                   <a href="https://www.revmed.com/media" target="_blank">Posters & Publications</a>
+                              </p>
                          </section> 
                     
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="kymera.html">&lt;Previous</a> <a href="monterosa.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
