--- a/companies/schrodinger.html
+++ b/companies/schrodinger.html
@@ -193,7 +193,7 @@
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="abcellera.html">&lt;Previous</a> <a href="beam.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
