--- a/companies/twist.html
+++ b/companies/twist.html
@@ -181,7 +181,7 @@
                          </section> 
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="ginkgo.html">&lt;Previous</a> <a href="ipsc.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
