--- a/companies/verve.html
+++ b/companies/verve.html
@@ -186,7 +186,7 @@
                          </section>
                     </div>
                     <div class="back-companies">
-                         <a href="companies.html">Back to Companies</a>
+                         <a href="companies.html">Companies Page</a> <a href="crispr.html">&lt;Previous</a> <a href="prime.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
