--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
                               <p> 
                                    <strong>2/13/2023: </strong> I added a Partnership Secton under each Company's Profile page.
-                                   I also added links section to their Website Key areas like Press Releases, Events and SEC filings.
+                                   I also added links section to their Website Key areas like Press Releases, Events, SEC filings and Publications.
+                                   I added navigation links at the bottom of each Profile page.
                               </p>
                               <p> 
                                    <strong>2/13/2023: </strong> I finished up the Companies pages. I even started adding new data 
